# yet-another-bencoder-py

./: .gitignore  README.md  main.py  pyproject.toml  requirements_dev.txt  setup.cfg
src/: bdecode.py  bencode.py
src/bdecoder/: decoder.py
src/bencoder/: __init__.py
tests/: test_main.py
