[metadata]
name = bencoder
description = Python API of the Gamedriver ApiClient
author = Ethan Evans
platforms = unix, linux, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    bencoder
    bdecoder

python_requires =
    >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    mypy>=0.910

[options.package_data]
bencoder=py.typed

[flake8]
max-line-length=160
